# Drone_Trainer

./: .BUGFIXES_V2.md.swp  .gitignore  BUGFIXES_V2.md  BUGFIXES_V2_PLAN.md  README.md  pyproject.toml  requirements.txt
autoresearch/: HANDOFF.md  compare_runs.py  leaderboard.csv  locked_manifest.json  research_journal.md  run_experiment.py
autoresearch/editable/: __init__.py  curriculum.py  policy_config.py  recipe.py  reward_weights.py
autoresearch/locked/: __init__.py  anti_cheat_checks.py  benchmark_scenarios.py  evaluator.py  scoring.py
bench/: eval.py  train.py
docs/: DRONE_INTERCEPT_3D_V2_SPEC.md  DRONE_INTERCEPT_3D_V2_TEST_PLAN.md  drone_intercept_3d_notes.md
drone_env/: __init__.py
drone_env/envs/: __init__.py  drone_intercept_3d.py  drone_intercept_3d_v2.py
drone_env/utils/: __init__.py  geometry.py  obstacle_geometry.py  rendering.py
planning/: README.md  drone_env_reward_weights.csv  drone_viewport_flythrough_task_backlog.csv
planning/PlansV1/: drone_env_acceptance_checks.csv  drone_env_codex_goal_prompt.md  drone_env_task_backlog.csv
planning/drone_intercept_v2_goal_pack/: ENV_SPEC_SKELETON.md  IMPLEMENTATION_ORDER.md  QWEN_THERMONUCLEAR_REVIEW_PROMPT.md  README.md  manifest.json  (+2 more)
scripts/: check_env.py  flythrough_regression_demo.py  manual_policy_demo.py  random_rollout.py  reward_debug.py  v2_eval_smoke.py  v2_train_smoke.py  viewport_search_demo.py
tests/: test_drone_intercept_3d.py  test_drone_intercept_3d_v2.py  test_drone_intercept_3d_v2_render.py  test_flythrough.py  test_geometry.py  test_obstacle_geometry.py  test_viewport.py
(+9 files in other folders)
