[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-env"
version = "0.1.0"
description = "Lightweight Gymnasium drone intercept environment"
requires-python = ">=3.10,<3.14"
dependencies = [
  "gymnasium>=0.29",
  "numpy>=1.24",
  "pygame>=2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "stable-baselines3>=2.3",
]

[tool.setuptools.packages.find]
include = ["drone_env*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
